--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hint_cliente">Cliente </string>
+    <string name="hint_email" >Email</string>
+    <string name="hint_ocupacion">Ocupacion</string>
     <string name="hint_balance" >Balance</string>
     <string name="guardar">Guardar</string>
 </resources>
