--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hint_ocupacion">Ocupacion ID</string>
     <string name="hint_balance" >Balance</string>
     <string name="guardar">Guardar</string>
+    <string name="agregar">Agregar</string>
 </resources>
